--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -9,8 +9,12 @@
     </div>
   <% end %>
 
+  <%= f.label :title, 'タイトル' %>
+  <%= f.text_field :title %>
+
   <%= f.label :content, 'メッセージ' %>
   <%= f.text_field :content %>
+
 
   <%= f.submit '投稿' %>
 <% end %>
