--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,5 +5,6 @@
     <li><%= link_to message.id, message %> : <%= message.title %> &gt; <%= message.content %></li>
   <% end %>
 </ul>
+<%= pagenate @messages %>
 
 <%= link_to '新規メッセージの投稿', new_message_path %>
